fix: 다이어리 모드에서 테마 스위치 이상한 문제 해결 z-index 상단으로 이동

--- a/src/assets/styles/components/_theme-switch.scss
+++ b/src/assets/styles/components/_theme-switch.scss
@@ -17,6 +17,7 @@ button {
     display: flex;
     align-items: center;
     padding: 2px;
+    z-index: $z-index-sticky;
   
     // 아이콘 컨테이너
     &__icons {
